--- a/www/custom-script/adguardhome.yaml
+++ b/www/custom-script/adguardhome.yaml
@@ -25,7 +25,6 @@ dns:
   upstream_dns:
     - '# LAN domain intercept'
     - '[/lan/]127.0.0.1:54'
-    - '# [//]127.0.0.1:54'
     - '# DNS-over-QUIC'
     - quic://unfiltered.adguard-dns.com
     - '# DNS-over-TLS'
@@ -146,6 +145,14 @@ filters:
     url: https://adguardteam.github.io/HostlistsRegistry/assets/filter_2.txt
     name: AdAway Default Blocklist
     id: 2
+  - enabled: true
+    url: https://raw.githubusercontent.com/AdguardTeam/FiltersRegistry/master/filters/filter_7_Japanese/filter.txt
+    name: AdGuard Japanese filter
+    id: 1764215105
+  - enabled: false
+    url: https://raw.githubusercontent.com/tofukko/filter/master/Adblock_Plus_list.txt
+    name: 豆腐フィルタ
+    id: 1764215106
 whitelist_filters: []
 user_rules:
   - '# google analytecs'
