--- a/www/custom-scripts/adguardhome.yaml
+++ b/www/custom-scripts/adguardhome.yaml
@@ -52,6 +52,9 @@ dns:
     - https://unfiltered.adguard-dns.com/dns-query
     - https://jp.tiar.app/dns-query
     - https://dns.nextdns.io
+  
+  upstream_mode: parallel
+  
   cache_size: 1048576
   enable_dnssec: false
   use_private_ptr_resolvers: true
