--- a/www/custom-scripts/adguardhome.yaml
+++ b/www/custom-scripts/adguardhome.yaml
@@ -12,7 +12,7 @@ dns:
   refuse_any: true
   upstream_dns:
     - '# LAN domain intercept'
-    - '[/lan/]127.0.0.1:54'
+    - '[/lan/]127.0.0.1:{{DNS_BACKUP_PORT}}'
     - '# NTP service'
     - '[/*.pool.ntp.org/]1.1.1.1'
     - '[/*.pool.ntp.org/]1.0.0.1'
