--- a/www/custom-scripts/adguardhome.yaml
+++ b/www/custom-scripts/adguardhome.yaml
@@ -1,12 +1,8 @@
 http:
   address: 0.0.0.0:{{WEB_PORT}}
-  session_ttl: 720h
 users:
   - name: {{AGH_USER}}
     password: {{AGH_PASS_HASH}}
-auth_attempts: 5
-block_auth_min: 15
-
 dns:
   port: {{DNS_PORT}}
   refuse_any: true
@@ -33,37 +29,22 @@ dns:
     - h3://dns.nextdns.io
   bootstrap_dns:
     - 1.1.1.1
-    - 1.0.0.1
     - 8.8.8.8
-    - 8.8.4.4
     - 172.104.93.80
     - 129.250.35.250
-    - 129.250.35.251
     - 2606:4700:4700::1111
-    - 2606:4700:4700::1001
     - 2001:4860:4860::8888
-    - 2001:4860:4860::8844
     - 2400:8902::f03c:91ff:feda:c514
     - 2001:418:3ff::53
-    - 2001:418:3ff::1:53
   fallback_dns:
     - https://cloudflare-dns.com/dns-query
     - https://dns.google/dns-query
     - https://unfiltered.adguard-dns.com/dns-query
     - https://jp.tiar.app/dns-query
     - https://dns.nextdns.io
-  
   upstream_mode: parallel
-  
-  cache_size: 1048576
-  enable_dnssec: false
-  use_private_ptr_resolvers: true
   local_ptr_upstreams:
     - 127.0.0.1:{{DNS_BACKUP_PORT}}
-
-tls:
-  enabled: false
-
 filters:
   - enabled: true
     url: https://adguardteam.github.io/HostlistsRegistry/assets/filter_1.txt
@@ -113,26 +94,31 @@ filters:
     url: https://raw.githubusercontent.com/tofukko/filter/master/Adblock_Plus_list.txt
     name: 豆腐フィルタ
     id: 99
-
 user_rules:
-  - '# google analytecs'
+  - '# google analytics'
   - '@@||analytics.google.com'
   - '# 日本の主要サービス'
   - '@@||amazon.co.jp^$important'
   - '@@||rakuten.co.jp^$important'
   - '@@||yahoo.co.jp^$important'
+  - '@@||mercari.com^$important'
+  - '@@||zozo.jp^$important'
+  - '@@||cookpad.com^$important'
+  - '# SNS関連'
+  - '@@||twitter.com^$important'
+  - '@@||facebook.com^$important'
+  - '@@||instagram.com^$important'
+  - '@@||messenger.com^$important'
   - '# LINE関連'
   - '@@||line.me^$important'
   - '@@||line-scdn.net^$important'
-
-dhcp:
-  enabled: false
-
-filtering:
-  parental_enabled: false
-  safebrowsing_enabled: false
-
+  - '# 動画・配信サービス'
+  - '@@||youtube.com^$important'
+  - '@@||nicovideo.jp^$important'
+  - '@@||abema.tv^$important'
+  - '# 汎用広告除外'
+  - '@@||google-analytics.com^$important'
+  - '@@||doubleclick.net^$important'
 log:
   file: ""
-
 schema_version: 29
