--- a/www/custom-scripts/adguardhome.yaml
+++ b/www/custom-scripts/adguardhome.yaml
@@ -10,10 +10,10 @@ dns:
     - '# LAN domain intercept'
     - '[/lan/]127.0.0.1:{{DNS_BACKUP_PORT}}'
     - '# NTP service'
-    - '[/*.pool.ntp.org/]1.1.1.1'
-    - '[/*.pool.ntp.org/]1.0.0.1'
-    - '[/*.pool.ntp.org/]2606:4700:4700::1111'
-    - '[/*.pool.ntp.org/]2606:4700:4700::1001'
+    - '[/*{{NTP_DOMAIN}}/]1.1.1.1'
+    - '[/*{{NTP_DOMAIN}}/]1.0.0.1'
+    - '[/*{{NTP_DOMAIN}}/]2606:4700:4700::1111'
+    - '[/*{{NTP_DOMAIN}}/]2606:4700:4700::1001'
     - '# DNS-over-QUIC'
     - quic://unfiltered.adguard-dns.com
     - '# DNS-over-TLS'
